# solana-layer-zero-endpoint

./: Anchor.toml
programs/solana-endpoint/: Cargo.toml
programs/solana-endpoint/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/solana-endpoint/src/instructions/: initialize.rs  lz_receive.rs  mod.rs  send.rs  set_peer_config.rs
programs/solana-endpoint/src/state/: mod.rs  peer_config.rs  store.rs
tests/: solana-endpoint.ts
